# agent_core_examples

./: README.md
agent-core-cli/: command to generate this project.txt
agent-core-cli/MyAgent/agentcore/: agentcore.json  aws-targets.json
agent-core-cli/MyAgent/agentcore/.cli/: deployed-state.json
agent-core-cli/MyAgent/agentcore/cdk/: package-lock.json
agent-core-cli/MyAgent/app/MyAgent/: README.md  main.py  pyproject.toml
agent-core-cli/MyAgent/app/MyAgent/mcp_client/: client.py
agent-core-cli/MyAgent/app/MyAgent/model/: load.py
simple_langchain/: .env.example  Dockerfile  README.md  agent.py  main.py  pyproject.toml  test_local.sh
simple_langchain/lambda_function/: lambda_function.py
simple_langchain/scripts/: agentcore_deploy.cfg  agentcore_deploy.py  build_docker_local.sh  build_push_ecr.sh  debug_memory.py  deploy.py  replay_conversation.py  run_docker.sh  test_local.sh
