[project]
name = "simple-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.15.0",
    "botocore[crt]>=1.43.36",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.0",
    "langgraph-checkpoint-aws>=0.1.0",
    "python-dotenv>=1.0.0",
    "aws-opentelemetry-distro>=0.9.0",
    "opentelemetry-instrumentation-langchain>=0.61.0",
    "opentelemetry-propagator-aws-xray>=1.0.0",
]
