[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MyAgent"
version = "0.1.0"
description = "AgentCore Runtime Application using LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "opentelemetry-instrumentation-langchain >= 0.59.0",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "langchain-mcp-adapters >= 0.2.0",
    "langchain >= 1.0.3",
    "bedrock-agentcore >= 1.8.0",
    "botocore[crt] >= 1.35.0",
    "langchain-aws >= 1.0.0",
    
]

[tool.hatch.build.targets.wheel]
packages = ["."]
